# needle

./: LICENSE  README.md  pyproject.toml
failback/: __init__.py
failback.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
failback/builtin/: __init__.py  backends.py  kimi_client.py  locator_solutions.py  timeout_solution.py
failback/core/: __init__.py  context.py  decorator.py  exceptions.py  handler.py  registry.py  solution.py
needle/: __init__.py
needle/builtin/: __init__.py  backends.py  kimi_client.py  locator_solutions.py  timeout_solution.py
needle/core/: __init__.py  context.py  decorator.py  exceptions.py  handler.py  registry.py  solution.py
tests/: conftest.py  test_custom_solution.py  test_handler.py  test_kimi_client.py  test_locator_solutions.py  test_recovery.py  test_registry.py
